# sirius_ws

./: .gitignore  .gitmodules  build_laserscan.sh  create_config_dir.sh  cyclonedds.xml  frames_2024-11-21_17.56.25.gv  frames_2024-12-03_20.18.27.gv  main.c  rebuild_velodyne.sh  setup_config_dir.sh
bash_dir/: 10_start_controller.sh  11_start_rviz2.sh  12_start_waypoint_nav.sh  13_start_collision_monitor.sh  14_start_get_position_distance.sh  15_start_get_position_enter.sh  16_start_tf2static_3.sh  17_start_urg_node2.sh  18_start_sirius_display.sh  19_start_hokuyo.sh  20_start_bumper.sh  (+12 more)
src/sirius_navigation/: CMakeLists.txt  package.xml
src/sirius_navigation/config/: 1515.yaml  atc.yaml
src/sirius_navigation/config/~20241029/: 1026_backup.yaml  1027_backup.yaml  1027_re.yaml  1hall.yaml  anakamap.yaml  fix_nakano.yaml  hikitugi.yaml  map.yaml  matuura.yaml  nakanoshima_2024_0929.yaml  nakanosima.yaml  nakanosima100.yaml  nakanosima100_1_27.yaml  nakanosima100_3.yaml  nakanosima100_4.yaml  nakanosima2.yaml  nakanosima3.yaml  nakanosima_goal.yaml  sotiron_test1.yaml  tanakamap.yaml
src/sirius_navigation/launch/: all_in_one_nav2.launch.py
src/sirius_navigation/params/: first.yaml  move_goal.yaml  second.yaml
src/sirius_navigation/scripts/: detect_2floor.py  get_position.py  get_position_distance.py  get_position_enter.py  initial_pose.py  move_goal copy.py  move_goal.py  move_goal2.py  move_goal_saka.py  move_goal_sakamoto.py  read.py  waypoint_viewer.py  waypoint_viewer2.py
src/sirius_navigation/src/: move_goal.cpp  move_goal_backup.cpp  save_odometry.cpp  subscribe_goal.cpp
(+123 files in other folders)
